# balance-hub

./: .dockerignore  .env.docker.example  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  specification_backend_python.md  Тестовое задание. Backend, Python.md
alembic/: env.py
alembic/versions/: 2025_08_14_1247-157c3a1e76ae_init_schema.py
app/: main.py
app/api/: __init__.py  deps.py  routers.py
app/api/routers/: accounts.py  auth.py  payments.py  users.py  webhook.py
app/api/v1/: __init__.py  accounts.py  auth.py  health.py  payments.py  users.py  webhook.py
app/core/: __init__.py  config.py  errors.py  security.py
app/core/constants/: __init__.py  api_descriptions.py  api_paths.py  api_responses.py  auth.py  domain.py  error_messages.py  field_constraints.py  money.py  pagination.py  regex.py
app/crud/: __init__.py  accounts.py  base.py  payments.py  users.py
app/db/: __init__.py  base.py  session.py  types.py
app/models/: __init__.py  account.py  payment.py  user.py
app/schemas/: __init__.py  account.py  common.py  payment.py  user.py
app/services/: __init__.py  accounts.py  auth.py  payments.py  users.py  webhook.py
app/utils/: crypto.py
app/validators/: __init__.py
app/validators/async_/: __init__.py  users.py
app/validators/sync/: __init__.py  accounts.py  users.py  webhook.py
scripts/: __init__.py  create_init_migration.py  seed.py
tests/: conftest.py  test_integration_full_flow.py  test_performance.py
tests/api/: __init__.py  test_routers.py
tests/api/v1/: __init__.py  test_accounts.py  test_auth.py  test_health.py  test_payments.py  test_users.py
tests/constants/: __init__.py  api_descriptions.py  api_paths.py  api_responses.py  auth.py  domain.py  error_messages.py  field_constraints.py  money.py  nums.py  pagination.py  regex.py  test_data.py
tests/core/: test_config.py  test_deps.py  test_errors.py  test_security.py
tests/crud/: __init__.py  test_accounts.py  test_payments.py  test_users.py
tests/db/: test_db_session.py  test_types.py
tests/models/: test_account.py  test_payment.py  test_user.py
tests/schemas/: __init__.py  test_account.py  test_payment.py  test_user.py
tests/services/: __init__.py  test_accounts.py  test_users.py
tests/utils/: test_webhook.py
tests/validators/async/: test_user_validators.py
tests/validators/sync/: test_account_validators.py  test_user_validators.py  test_webhook_validators.py
